<resources>
    <string name="app_name">MotoRent</string>
    <string name="preference_file_key">ub.es.motorent.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_maps">Map</string>
    <string name="web_client_id">657403564853-b9ptfip8htece81dpttceh1slf9hp9di.apps.googleusercontent.com</string>
    <string name="fail_google_auth">Google sign in failed</string>
    <string name="fail_auth">Authentication failed.</string>
    <string name="ok_auth">Authentication success.</string>
    <string name="welcome">Welcome</string>
    <string name="ask_name">Enter your name</string>
    <string name="example_user">Nickname here</string>
    <string name="go">GO</string>
    <string name="user_name_exist">User name already exist</string>
    <string name="bad_user_name">Bad username</string>
    <string name="user_created">User created</string>
    <string name="fail_create_user">User cannot be created at this moment</string>
    <string name="imp_create_user">Impossible to create this user</string>
    <string name="loading_content">Loading</string>
    <string name="signin">Sign In</string>
    <string name="introdueix_el_nom_d_usuari">Introdueix el nom d\'usuari</string>
    <string name="enviar_correu">Enviar Correu</string>
    <string name="cancel_lar">Cancel·lar</string>
    <string name="intrdueix_el_email_del_teu_perfil">Intrdueix el email del teu perfil</string>
    <string name="email_usat">Email usat</string>
    <string name="nom_d_usuari">Nom d\'usuari:</string>
    <string name="username">Username</string>
    <string name="contrasenya">Contrasenya:</string>
    <string name="password">Password</string>
    <string name="iniciar_sessi">Iniciar Sessió</string>
    <string name="o_registrar_se_v_a_mail">o registrar-se vía mail</string>
    <string name="registrar_amb">Registrar amb</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="recuperar_contrasenya">Recuperar contrasenya</string>

    <string name="facebook_app_id">1088984701532674</string>
    <string name="fb_login_protocol_scheme">fb1088984701532674</string>

    <string name="twitter_consumer_key" translatable="false">uRMpz6t62GD33HLylStt71kyl</string>
    <string name="twitter_consumer_secret" translatable="false">7E3YLGOkLx7rFCQjaorBA8uBRT5cdC1IwStT9oDhicY2dNbyYU</string>
    <string name="email">Email:</string>
    <string name="email_example">motorent@exemple.com</string>
    <string name="registrar">Registrar-me</string>
    <string name="benvingut_a_motorent">Benvingut a Motorent</string>
    <string name="logomotorent">logoMotorent</string>
    <string name="dades_personals">Dades personals:</string>
    <string name="introdueix_el_pa_s_i_num_document_identitat">Introdueix el país i num. document identitat:</string>
    <string name="nom">Nom</string>
    <string name="cognom">Cognoms</string>
    <string name="numero_d_identitat">Numero d\'identitat</string>
    <string name="nomcognoms">Nom i Cognoms:</string>
    <string name="nom_complet">Nom complet</string>
    <string name="numero_de_la_targeta">Numero de la targeta</string>
    <string name="caducitat">Caducitat</string>
    <string name="cvv">CVV</string>
    <string name="nom_complet_del_titular_de_la_targeta">Nom complet del titular de la targeta:</string>
    <string name="dades_banc_ries">Dades Bancàries</string>
    <string name="dades_personal">Dades personals</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="acceptar">acceptar</string>
    <string name="tornar">tornar</string>
    <string name="addCreditCard">Afegir targeta crèdit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matricula">Matricula:</string>
    <string name="reservar">Reservar</string>
    <string name="initViatge">Iniciat viatge</string>
    <string name="finViatge">Finalitzar viatge</string>
    <string name="repIncidencia">Reportar incidencia</string>
    <string name="opcions_de_la_queixa">Incidències més comuns:</string>
    <string name="la_motocicleta_no_funciona">La motocicleta no funciona</string>
    <string name="la_motocicleta_no_est_a_la_direcci">La motocicleta no està a la direcció</string>
    <string name="he_notat_un_comportament_extrany_a_la_moto">He notat un comportament extrany a la moto</string>
    <string name="motocicleta_en_mal_estat">Motocicleta en mal estat</string>
    <string name="introdueix_un_breu_resum">Introdueix un breu resum:</string>
    <string name="breu_resum">Breu resum</string>
    <string name="enviar_queixa">Reportar incidència</string>
    <string name="todo">TODO</string>
    <string name="title_activity_bank_form">BankFormActivity</string>
    <string name="title_activity_creditcards">CreditCardsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="succesAddCreditCard">Targeta de credit afegida</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="eliminar">Eliminar</string>
    <string name="targeta">Targeta:</string>
    <string name="marcar_com_a_preferida">Marcar com a preferida</string>
    <string name="caducitat_mm_yy">Caducitat MM/YY</string>
</resources>
