<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fons_login"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".app.view.RecuperarContraActivity">

    <ImageView
        android:id="@+id/motorent_logo"
        android:layout_width="121dp"
        android:layout_height="116dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="70dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/moto_toast"/>

    <LinearLayout
        android:id="@+id/fragment_login"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/intrdueix_el_email_del_teu_perfil"
            android:textColor="@color/colorWelcomeName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_usat"
            android:inputType="textEmailAddress" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enviar_correu" />

            <Button
                android:id="@+id/cancelMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_lar" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>